--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="theme-color" content="#041014">
     <meta name="description" content="A demo flask progressive web app">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}"> {% block title %}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}"> {% block title %}
     <title>New Year Countdown</title>
     {% endblock %}
 </head>
