--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#041014">
     <meta name="description" content="A demo flask progressive web app">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-    <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}"> {% block title %}
+    <link rel="manifest" href="/manifest.json"> {% block title %}
     <title>New Year Countdown</title>
     {% endblock %}
 </head>
