--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="theme-color" content="#041014">
-    <meta name="description" content="A demo flask progressive web app">
+    <meta name="description" content="New Year's Countdown Timer">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <link rel="manifest" href="/manifest.json"> {% block title %}
     <title>New Year Countdown</title>
