--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 
-<h1>New Year Countdown</h1>
+<h1>New Year's Countdown</h1>
 <div id="countdown" class="countdown">
     <div class="time">
         <h2 id="days"></h2>
