--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block content %}
+<button class="add-button">Add to home screen</button>
 
 <h1>New Year's Countdown</h1>
 <div id="countdown" class="countdown">
